DT-1843 basket dropdown alignment fixed

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -326,8 +326,10 @@
     vertical-align: top;
     margin-right: 20px;
     text-align: left;
+    max-width: 50%;
     @media @tablet {
         width: 100%;
+        max-width: 100%;
         margin-right: 0;
     }
 }
